# Virtual-Library-Management-System

./: BinarySearchTree.cpp  BinarySearchTree.h  Book.cpp  Book.h  CMakeLists.txt  DOCUMENTATION.txt  LICENSE  LibrarySystem.cpp  LibrarySystem.h  Makefile  Makefile.txt  README.md  VLMS Gantt Chart.xlsx  a_makefile_for_windows.txt  adjusted book-c  administrator.cpp  administrator.h  bSearchTreeType.cpp  bSearchTreeType.h  bookDB.json  bookWaitlistDB.json  bookdatabase.cpp  bookdatabase.h  borrowedBooksDB.json  brief analysis.txt  globals.h  instructions.txt  libraryManagementSystem.cpp  libraryManagementSystem.h  main  main.cpp  old_user_test_cpp.txt  oldusercpp.txt  olduserh.txt  oldwelcomepagecpp.txt  oldwelcomepagehpp.txt  queue.cpp  queue.h  run.bat  testPort.txt  (+9 more)
